--- a/svm62/qr4p10.html
+++ b/svm62/qr4p10.html
@@ -1,5 +1,5 @@
 <p>
-<table class='sql_table' >
+<table class='sql_table' id='qr4p10' >
 <tr>
 <th scope="col">
 COUNT(SCORE)
@@ -7,7 +7,7 @@ COUNT(SCORE)
 </tr>
 <tr>
 <td align="right">
-       347
+       371
 </td>
 </tr>
 </table>
