--- a/svm62/qr4p14.html
+++ b/svm62/qr4p14.html
@@ -1,5 +1,5 @@
 <p>
-<table class='sql_table' >
+<table class='sql_table' id='qr4p14' >
 <tr>
 <th scope="col">
 PAIR
@@ -34,19 +34,19 @@ aud_jpy
 buy
 </td>
 <td align="right">
-     .0145
+     .0310
 </td>
 <td align="right">
-         3
+        11
 </td>
 <td align="right">
-    .0048
+    .0028
 </td>
 <td align="right">
-     .0027
+     .0009
 </td>
 <td align="right">
-   1.7800
+   3.0100
 </td>
 <td>
 good
@@ -60,19 +60,19 @@ aud_usd
 buy
 </td>
 <td align="right">
-     .0696
+     .0885
 </td>
 <td align="right">
-        19
+        30
 </td>
 <td align="right">
-    .0037
+    .0029
 </td>
 <td align="right">
-      .003
+     .0019
 </td>
 <td align="right">
-   1.2100
+   1.5200
 </td>
 <td>
 good
@@ -86,19 +86,19 @@ aud_usd
 sell
 </td>
 <td align="right">
-     .0121
+     .0127
 </td>
 <td align="right">
-        15
+        14
 </td>
 <td align="right">
-    .0008
+    .0009
 </td>
 <td align="right">
      .0017
 </td>
 <td align="right">
-    .4800
+    .5400
 </td>
 <td>
 bad
@@ -109,25 +109,51 @@ bad
 eur_aud
 </td>
 <td>
-sell
+buy
 </td>
 <td align="right">
-    -.0130
+     .0070
 </td>
 <td align="right">
-         6
+         2
 </td>
 <td align="right">
-   -.0022
+    .0035
 </td>
 <td align="right">
-     .0031
+     .0059
 </td>
 <td align="right">
-   -.7000
+    .5900
 </td>
 <td>
 good
+</td>
+</tr>
+<tr>
+<td>
+eur_aud
+</td>
+<td>
+sell
+</td>
+<td align="right">
+     .0304
+</td>
+<td align="right">
+        26
+</td>
+<td align="right">
+    .0012
+</td>
+<td align="right">
+     .0033
+</td>
+<td align="right">
+    .3600
+</td>
+<td>
+bad
 </td>
 </tr>
 <tr>
@@ -164,22 +190,22 @@ eur_chf
 sell
 </td>
 <td align="right">
-    -.0094
+     .1148
 </td>
 <td align="right">
-        43
+        56
 </td>
 <td align="right">
-   -.0002
+    .0021
 </td>
 <td align="right">
-     .0016
+     .0022
 </td>
 <td align="right">
-   -.1300
+    .9200
 </td>
 <td>
-good
+bad
 </td>
 </tr>
 <tr>
@@ -210,51 +236,25 @@ good
 </tr>
 <tr>
 <td>
-eur_gbp
-</td>
-<td>
-sell
-</td>
-<td align="right">
-     .0033
-</td>
-<td align="right">
-         2
-</td>
-<td align="right">
-    .0017
-</td>
-<td align="right">
-         0
-</td>
-<td align="right">
-  41.4500
-</td>
-<td>
-bad
-</td>
-</tr>
-<tr>
-<td>
 eur_jpy
 </td>
 <td>
 buy
 </td>
 <td align="right">
-    -.0294
+    -.0286
 </td>
 <td align="right">
          7
 </td>
 <td align="right">
-   -.0042
+   -.0041
 </td>
 <td align="right">
      .0033
 </td>
 <td align="right">
-  -1.2700
+  -1.2500
 </td>
 <td>
 bad
@@ -268,19 +268,19 @@ eur_jpy
 sell
 </td>
 <td align="right">
-    -.0265
+    -.0287
 </td>
 <td align="right">
-        13
+         8
 </td>
 <td align="right">
-   -.0020
+   -.0036
 </td>
 <td align="right">
-     .0034
+     .0031
 </td>
 <td align="right">
-   -.6100
+  -1.1600
 </td>
 <td>
 good
@@ -294,19 +294,19 @@ eur_usd
 buy
 </td>
 <td align="right">
-    -.0010
+    -.0323
 </td>
 <td align="right">
-        33
+        18
 </td>
 <td align="right">
-    .0000
+   -.0018
 </td>
 <td align="right">
-     .0029
+     .0027
 </td>
 <td align="right">
-   -.0100
+   -.6700
 </td>
 <td>
 bad
@@ -315,6 +315,58 @@ bad
 <tr>
 <td>
 eur_usd
+</td>
+<td>
+sell
+</td>
+<td align="right">
+    -.0154
+</td>
+<td align="right">
+         5
+</td>
+<td align="right">
+   -.0031
+</td>
+<td align="right">
+     .0025
+</td>
+<td align="right">
+  -1.2300
+</td>
+<td>
+good
+</td>
+</tr>
+<tr>
+<td>
+gbp_usd
+</td>
+<td>
+buy
+</td>
+<td align="right">
+     .0170
+</td>
+<td align="right">
+        52
+</td>
+<td align="right">
+    .0003
+</td>
+<td align="right">
+      .002
+</td>
+<td align="right">
+    .1700
+</td>
+<td>
+good
+</td>
+</tr>
+<tr>
+<td>
+gbp_usd
 </td>
 <td>
 sell
@@ -329,62 +381,10 @@ sell
    -.0024
 </td>
 <td align="right">
-     .0028
-</td>
-<td align="right">
-   -.8800
-</td>
-<td>
-good
-</td>
-</tr>
-<tr>
-<td>
-gbp_usd
-</td>
-<td>
-buy
-</td>
-<td align="right">
-    -.0126
-</td>
-<td align="right">
-        58
-</td>
-<td align="right">
-   -.0002
-</td>
-<td align="right">
-     .0021
-</td>
-<td align="right">
-   -.1000
-</td>
-<td>
-bad
-</td>
-</tr>
-<tr>
-<td>
-gbp_usd
-</td>
-<td>
-sell
-</td>
-<td align="right">
-    -.0148
-</td>
-<td align="right">
-         6
-</td>
-<td align="right">
-   -.0025
-</td>
-<td align="right">
       .002
 </td>
 <td align="right">
-  -1.2200
+  -1.2000
 </td>
 <td>
 good
@@ -424,19 +424,19 @@ usd_chf
 sell
 </td>
 <td align="right">
-     .0147
+     .0192
 </td>
 <td align="right">
-        70
+        64
 </td>
 <td align="right">
-    .0002
+    .0003
 </td>
 <td align="right">
-     .0022
+     .0023
 </td>
 <td align="right">
-    .0900
+    .1300
 </td>
 <td>
 bad
@@ -453,7 +453,7 @@ sell
      .0182
 </td>
 <td align="right">
-        55
+        62
 </td>
 <td align="right">
     .0003
@@ -462,7 +462,7 @@ sell
       .001
 </td>
 <td align="right">
-    .3200
+    .3000
 </td>
 <td>
 bad
