--- a/svm62/qr4p12.html
+++ b/svm62/qr4p12.html
@@ -1,5 +1,5 @@
 <p>
-<table class='sql_table' >
+<table class='sql_table' id='qr4p12' >
 <tr>
 <th scope="col">
 ACTION
@@ -28,19 +28,19 @@ GOODBAD
 buy
 </td>
 <td align="right">
-     .0401
+     .0821
 </td>
 <td align="right">
-       130
+       129
 </td>
 <td align="right">
-    .0003
+    .0006
 </td>
 <td align="right">
-     .0031
+     .0029
 </td>
 <td align="right">
-    .1000
+    .2200
 </td>
 <td>
 good
@@ -51,22 +51,22 @@ good
 sell
 </td>
 <td align="right">
-    -.0317
+     .1350
 </td>
 <td align="right">
-       217
+       242
 </td>
 <td align="right">
-   -.0001
+    .0006
 </td>
 <td align="right">
-     .0021
+     .0025
 </td>
 <td align="right">
-   -.0700
+    .2200
 </td>
 <td>
-good
+bad
 </td>
 </tr>
 </table>
